# Mp4StatsCollector

./: CMakeLists.txt  README.md  main.cpp
Mp4Parser/: CMakeLists.txt  Mp4Parser.cpp  Mp4Parser.h  Utilities.h  library.cpp  library.h
Mp4Parser/atoms/: Mp4Atom.h  Mp4AtomAv01.h  Mp4AtomAv1C.h  Mp4AtomAvc1.h  Mp4AtomAvcC.h  Mp4AtomClef.h  Mp4AtomCo64.h  Mp4AtomCslg.h  Mp4AtomCtts.h  Mp4AtomDinf.h  Mp4AtomDops.h  Mp4AtomDref.h  Mp4AtomEdts.h  Mp4AtomElst.h  Mp4AtomEnof.h  Mp4AtomEsds.h  Mp4AtomFree.h  Mp4AtomFtyp.h  Mp4AtomGmhd.h  Mp4AtomGmin.h  Mp4AtomHdlr.h  Mp4AtomHmhd.h  Mp4AtomIlst.h  Mp4AtomIods.h  Mp4AtomKeys.h  Mp4AtomMdat.h  Mp4AtomMdhd.h  Mp4AtomMdia.h  Mp4AtomMinf.h  Mp4AtomMoov.h  Mp4AtomMvhd.h  Mp4AtomSdtp.h  Mp4AtomSmhd.h  Mp4AtomStbl.h  Mp4AtomStco.h  Mp4AtomStsc.h  Mp4AtomStsd.h  Mp4AtomStss.h  Mp4AtomStsz.h  Mp4AtomStts.h  (+5 more)
